@@ -1,6 +1,7 @@
 * 2007-08-22 - choeger@open-xchange.com
 
   - Bugfix ID#8989 generatempasswd no newline in output
+  - Bugfix ID#8991 initconfigdb, return code is always 0
 
 * 2007-08-21 - dennis.sieben@open-xchange.com
 
